# limit_wallet

./: README.md  bun.lockb  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: coingecko.rs  main.rs
src/routes/: +page.svelte
