[package]
name = "limit_wallet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
bdk = { version = "0.28.2", features = ["keys-bip39"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
base64 = "0.22.1"
log = "0.4.22"
env_logger = "0.11.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
